Updating developper-resources

--- a/developper-resources.html
+++ b/developper-resources.html
@@ -9,21 +9,18 @@
 </head>
 <body>
     <nav class="nav">
-        <h1>Developer Resources</h1>
-        <ul>
-            <li>Landing page</li>                
-            <li>Ecosystem</li>
-            <li>Developper resources</li>
-        </ul>
+        <h1>Header Nav</h1>
     </nav>
     <!-- bloc de 6 -->
     <main>
         <section>
             <div class="devresource1">
-                <div class="devresource1-1">WildCoin
-                    for Beginners
-                    Blog Post</div>
-                <div class="devresource1-2">Learn about high-level topics related to Solana development such as development workflows, programs, myths, dApps (decentralized applications), and client SDKs.</div>
+                <div class="devresource1-1">
+                    <h1>WildCoin for Beginners Blog Post</h1>
+                </div>
+                <div class="devresource1-2">
+                    <p>Learn about high-level topics related to Solana development such as development workflows, programs, myths, dApps (decentralized applications), and client SDKs.</p>
+                </div>
             </div>
             <div class="devresource1-3"></div>
         </section>
