--- a/developper-resources.html
+++ b/developper-resources.html
@@ -14,7 +14,7 @@
     <!-- bloc de 6 -->
     <main>
         <section>
-            <div class="devresource1">
+            <div class="beginnersBlog">
                 <div class="devresource1-1">
                     <h1>WildCoin for Beginners Blog Post</h1>
                 </div>
@@ -26,7 +26,7 @@
         </section>
         <section class="wildcoinbegin"></section>
         <section class="devresource2"></section>
-        <section class="bloc-container">
+        <section class="dev-res-container">
             <article class="bloc bloc1">
                 <h1>WildCoin Cookbook</h1>
                 <p>Developer resource that provides the essential concepts and recipes for building applications on WildCoin.</p>
@@ -48,7 +48,14 @@
                 <button>Review it</button>
             </article>
         </section>
-
+        <section>
+            <div class="toolsContainer">
+                <article class="toolBloc ToolBloc1"></article>
+                <article class="toolBloc ToolBloc2"></article>
+                <article class="toolBloc ToolBloc3"></article>
+                <article class="toolBloc ToolBloc4"></article>
+            </div>
+        </section>
     </main>
     <footer>
         <div>@2022 WildCon technologie</div>
