Delete branch eric

--- a/developper-resources.html
+++ b/developper-resources.html
@@ -1,3 +1,4 @@
+<!-- WildCoin -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,11 +9,10 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="nav">
-        <h1>Header Nav</h1>
-    </nav>
-    <!-- bloc de 6 -->
     <main>
+        <nav class="nav">
+            <h1>Header Nav</h1>
+        </nav>
         <section>
             <div class="beginnersBlog">
                 <div class="devresource1-1">
@@ -56,9 +56,9 @@
                 <article class="toolBloc ToolBloc4"></article>
             </div>
         </section>
-    </main>
     <footer>
         <div>@2022 WildCon technologie</div>
      </footer>
+    </main>
 </body>
 </html>
