--- a/index.html
+++ b/index.html
@@ -13,21 +13,13 @@
         <label for="toggle">☰</label>
         <input type="checkbox" id="toggle">
         <ul class="main_pages">
-            <li>Home</li>
-            <li>Ecosystem</li>
-            <li>Developer Resources</li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href=/ecosystem.html>Ecosystem</a></li>
+            <li><a href="/developer-resources.html">Developer Resources</a></li>
             </ul>
     </nav>
 
-    <h1 class="container">
-        <p> Powerful for developpers. Fast for everyone.</p>
-    </h1>
-
-    <h2 class="buttons">
-
-    </h2>
-
-    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium beatae voluptatum quam reiciendis animi? Optio sint, autem laborum minus alias consequuntur atque veritatis reiciendis quaerat quidem porro enim laboriosam molestiae!</p>
+    
     
     <footer class="end_page">
         <p>2022 WildCoin technology</p>
