--- a/pages/devresources/developper-resources.html
+++ b/pages/devresources/developper-resources.html
@@ -30,35 +30,84 @@
             <article class="bloc bloc1">
                 <h1>WildCoin Cookbook</h1>
                 <p>Developer resource that provides the essential concepts and recipes for building applications on WildCoin.</p>
-                <button>Review it</button>
+                <button class="blackButton">Review it</button>
             </article>
             <article class="bloc bloc2">
                 <h1>WildCoinDev</h1>
                 <p>WildCoin content aggregator with easy discoverability for all your development needs including tutorials, tools, reference implementations and more.</p>
-                <button>Review it</button>
+                <button class=blackButton>Review it</button>
             </article>
             <article class="bloc bloc3">
                 <h1>WildCoin Docs</h1>
                 <p>The core wildCoin documentation used to provide deep understanding of Solana concepts, architecture, programming model and more.</p>
-                <button>Review it</button>
+                <button class=blackButton>Review it</button>
             </article>
             <article class="bloc bloc4">
                 <h1>Metaplex Docs</h1>
                 <p>The core Metaplex documentation used to provide understanding and implementations for building with NFTs on WildCoin.</p>
-                <button>Review it</button>
+                <button class=blackButton>Review it</button>
             </article>
         </section>
         <section>
             <div class="toolsContainer">
-                <article class="toolBloc ToolBloc1"></article>
-                <article class="toolBloc ToolBloc2"></article>
-                <article class="toolBloc ToolBloc3"></article>
-                <article class="toolBloc ToolBloc4"></article>
+                <article class="toolBloc toolBloc1">
+                    <p></p>
+                    <p>~</p>
+                    <p>➞  WildCoin config set --url https://api.devnet.wildcoin.com</p>
+                    <p>Config File: /Users/eric/.config/wildcoin/cli/config.yml</p>
+                    <p>RPC URL: https://api.devnet.wildcoin.com</p>
+                    <p> WebSocket URL: wss://api.devnet.wildcoin.com/ (computed)</p>
+                    <p></p>
+                    <p> Keypair Path: /Users/eric/.config/wildcoin/id.json</p>
+                    <p> Commitment: confirmed</p>
+                    <p></p>
+                    <p>~</p>
+                    <p> ➞  wildcoin balance #</p>
+                    <p> 4 WILD</p>
+                    <p></p>
+                    <p> ~</p>
+                    <p> ➞  wildcoin airdrop 1</p>
+                    <p> Requesting wildcoin of 1 SOL</p>
+                    <p></p>
+                    <p> Signature: 2vmr7UNM255MhnJ2ht8PzaZmN5oeJ</p>
+                    <p></p>
+                    <p> 5 WILD</p>
+                    <p></p>
+                    <p> ~</p>
+                    <p>  ➞  wildcoin balance #</p>
+                    <p></p>
+                    <p> ➞  wildcoin confirm --verbose 2vmr7UNM255Mh</p>
+                    <p> RPC URL: https://api.devnet.wildcoin.com</p>
+                    <p> Default Signer Path: /Users/eric/.config/wildcoin/id.json</p>
+                    <p> Commitment: confirmed</p>
+                    <p></p>
+                    <p>Confirmed</p>
+                </article>
+                <article class="toolBloc toolBloc2">
+                    <h1>Start with the</h1>
+                    <h1>WildCoin cli</h1>
+                    <p>The WildCoin CLI is a tool that allows you to interact with the WildCoin blockchain via the command line.</p>
+                    <button class=whiteButton>Build now</button>
+                </article>
+                <article class="/toolBloc toolBloc3">
+                </article>
+                <article class="toolBloc toolBloc4">
+                    <h1>WildCoin Explorer</h1>
+                    <p>The WildCoin Explorer allows you to look up transactions and accounts on the various Solana clusters.</p>
+                    <button class=whiteButton>Build now</button>
+                </article>
+                <article class="toolBloc toolBloc5">
+                    <source src="/media/cc0-videos/flower.webm" type="video/webm">
+                </article>
+                <article class="toolBloc toolBloc6">
+                    <p>Toto</p>
+                </article>
             </div>
         </section>
     <footer>
         <div>@2022 WildCon technologie</div>
      </footer>
     </main>
+    <script src="scriptdevres.js"></script>
 </body>
 </html>
