new dev devresources

--- a/pages/devresources/developper-resources.html
+++ b/pages/devresources/developper-resources.html
@@ -97,7 +97,7 @@
                     <button class=whiteButton>Build now</button>
                 </article>
                 <article class="toolBloc toolBloc5">
-                    <source src="/media/cc0-videos/flower.webm" type="video/webm">
+                    <!--<source src="/media/cc0-videos/flower.webm" type="video/webm">-->
                 </article>
                 <article class="toolBloc toolBloc6">
                     <p>Toto</p>
