--- a/pages/landing-page/index.html
+++ b/pages/landing-page/index.html
@@ -15,8 +15,8 @@
     <nav class="navbar">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="/ecosystem/ecosystem.html">Ecosystem</a></li>
-            <li><a href="/devresources/developper-resources.html">Developer resources</a></li>
+            <li><a href="/pages/ecosystem/ecosystem.html">Ecosystem</a></li>
+            <li><a href="/pages/devresources/developper-resources.html">Developer resources</a></li>
         </ul>
     </nav>
     </header>
