updating devresources with video

--- a/pages/devresources/developper-resources.html
+++ b/pages/devresources/developper-resources.html
@@ -51,33 +51,21 @@
         <section>
             <div class="toolsContainer">
                 <article class="toolBloc toolBloc1">
-                    <p></p>
                     <p>~</p>
                     <p>➞  WildCoin config set --url https://api.devnet.wildcoin.com</p>
-                    <p>Config File: /Users/eric/.config/wildcoin/cli/config.yml</p>
-                    <p>RPC URL: https://api.devnet.wildcoin.com</p>
-                    <p> WebSocket URL: wss://api.devnet.wildcoin.com/ (computed)</p>
-                    <p></p>
                     <p> Keypair Path: /Users/eric/.config/wildcoin/id.json</p>
                     <p> Commitment: confirmed</p>
-                    <p></p>
-                    <p>~</p>
-                    <p> ➞  wildcoin balance #</p>
-                    <p> 4 WILD</p>
-                    <p></p>
-                    <p> ~</p>
+                    <br>
+                    <p> ~ 4 WILD</p>
                     <p> ➞  wildcoin airdrop 1</p>
                     <p> Requesting wildcoin of 1 SOL</p>
                     <p></p>
                     <p> Signature: 2vmr7UNM255MhnJ2ht8PzaZmN5oeJ</p>
                     <p></p>
-                    <p> 5 WILD</p>
-                    <p></p>
-                    <p> ~</p>
+                    <p> ~ 5 WILD</p>
                     <p>  ➞  wildcoin balance #</p>
                     <p></p>
                     <p> ➞  wildcoin confirm --verbose 2vmr7UNM255Mh</p>
-                    <p> RPC URL: https://api.devnet.wildcoin.com</p>
                     <p> Default Signer Path: /Users/eric/.config/wildcoin/id.json</p>
                     <p> Commitment: confirmed</p>
                     <p></p>
@@ -86,22 +74,32 @@
                 <article class="toolBloc toolBloc2">
                     <h1>Start with the</h1>
                     <h1>WildCoin cli</h1>
-                    <p>The WildCoin CLI is a tool that allows you to interact with the WildCoin blockchain via the command line.</p>
+                    <p class="pMargin">The WildCoin CLI is a tool that allows you to interact with the WildCoin blockchain via the command line.</p>
                     <button class=whiteButton>Build now</button>
                 </article>
                 <article class="/toolBloc toolBloc3">
                 </article>
                 <article class="toolBloc toolBloc4">
                     <h1>WildCoin Explorer</h1>
-                    <p>The WildCoin Explorer allows you to look up transactions and accounts on the various Solana clusters.</p>
+                    <p class="pMargin">The WildCoin Explorer allows you to look up transactions and accounts on the various WildCoin clusters.</p>
                     <button class=whiteButton>Build now</button>
                 </article>
                 <article class="toolBloc toolBloc5">
+                    <video id="background-video" autoplay loop muted>
+                        <source src="https://assets.codepen.io/6093409/river.mp4" type="video/mp4">
+                        
+                    </video>
+                    <p>WildCoin history</p>
+                    <button id="btnVideo" onclick="playAndPause()">Pause II</button>
+                    <div class="content">
+                    </div>
                     <!--<source src="/media/cc0-videos/flower.webm" type="video/webm">-->
                 </article>
                 <article class="toolBloc toolBloc6">
-                    <p>Toto</p>
-                </article>
+                    <h1>WildCoin Graphicals</h1>
+                    <p class="pMargin">The WildCoin Graphicals allows you to see variations of WildCoin values</p>
+                    <button class=whiteButton>Build now</button>
+                 </article>
             </div>
         </section>
     <footer>
