updating html and css

--- a/pages/devresources/developper-resources.html
+++ b/pages/devresources/developper-resources.html
@@ -19,7 +19,7 @@
                     <h1>WildCoin for Beginners Blog Post</h1>
                 </div>
                 <div class="devresource1-2">
-                    <p>Learn about high-level topics related to Solana development such as development workflows, programs, myths, dApps (decentralized applications), and client SDKs.</p>
+                    <p>Learn about high-level topics related to WildCoin development such as development workflows, programs, myths, dApps (decentralized applications), and client SDKs.</p>
                 </div>
             </div>
             <div class="devresource1-3"></div>
@@ -39,7 +39,7 @@
             </article>
             <article class="bloc bloc3">
                 <h1>WildCoin Docs</h1>
-                <p>The core wildCoin documentation used to provide deep understanding of Solana concepts, architecture, programming model and more.</p>
+                <p>The core wildCoin documentation used to provide deep understanding of WildCoin concepts, architecture, programming model and more.</p>
                 <button class=blackButton>Review it</button>
             </article>
             <article class="bloc bloc4">
@@ -75,30 +75,29 @@
                     <h1>Start with the</h1>
                     <h1>WildCoin cli</h1>
                     <p class="pMargin">The WildCoin CLI is a tool that allows you to interact with the WildCoin blockchain via the command line.</p>
-                    <button class=whiteButton>Build now</button>
+                    <!-- <button class=whiteButton>Build now</button> -->
+                    <button class=whiteButton>Buy now</button>
                 </article>
                 <article class="/toolBloc toolBloc3">
                 </article>
                 <article class="toolBloc toolBloc4">
                     <h1>WildCoin Explorer</h1>
                     <p class="pMargin">The WildCoin Explorer allows you to look up transactions and accounts on the various WildCoin clusters.</p>
-                    <button class=whiteButton>Build now</button>
+                    <button class=whiteButton>Buy now</button>
                 </article>
                 <article class="toolBloc toolBloc5">
                     <video id="background-video" autoplay loop muted>
-                        <source src="https://assets.codepen.io/6093409/river.mp4" type="video/mp4">
-                        
+                        <source src="https://media.istockphoto.com/videos/hong-kong-financial-district-at-night-and-stock-finance-concept-video-id1214716353">
                     </video>
                     <p>WildCoin history</p>
                     <button id="btnVideo" onclick="playAndPause()">Pause II</button>
                     <div class="content">
                     </div>
-                    <!--<source src="/media/cc0-videos/flower.webm" type="video/webm">-->
                 </article>
                 <article class="toolBloc toolBloc6">
                     <h1>WildCoin Graphicals</h1>
                     <p class="pMargin">The WildCoin Graphicals allows you to see variations of WildCoin values</p>
-                    <button class=whiteButton>Build now</button>
+                    <button class=whiteButton>Buy now</button>
                  </article>
             </div>
         </section>
