--- a/pages/devresources/developper-resources.html
+++ b/pages/devresources/developper-resources.html
@@ -20,33 +20,52 @@
                 </div>
                 <div class="devresource1-2">
                     <p>Learn about high-level topics related to WildCoin development such as development workflows, programs, myths, dApps (decentralized applications), and client SDKs.</p>
+                    <button class="blackButtonBegin">READ THE BLOG</button>
                 </div>
             </div>
             <div class="devresource1-3"></div>
         </section>
-        <section class="wildcoinbegin"></section>
         <section class="devresource2"></section>
         <section class="dev-res-container">
-            <article class="bloc bloc1">
-                <h1>WildCoin Cookbook</h1>
-                <p>Developer resource that provides the essential concepts and recipes for building applications on WildCoin.</p>
-                <button class="blackButton">Review it</button>
-            </article>
-            <article class="bloc bloc2">
-                <h1>WildCoinDev</h1>
-                <p>WildCoin content aggregator with easy discoverability for all your development needs including tutorials, tools, reference implementations and more.</p>
-                <button class=blackButton>Review it</button>
-            </article>
-            <article class="bloc bloc3">
-                <h1>WildCoin Docs</h1>
-                <p>The core wildCoin documentation used to provide deep understanding of WildCoin concepts, architecture, programming model and more.</p>
-                <button class=blackButton>Review it</button>
-            </article>
-            <article class="bloc bloc4">
-                <h1>Metaplex Docs</h1>
-                <p>The core Metaplex documentation used to provide understanding and implementations for building with NFTs on WildCoin.</p>
-                <button class=blackButton>Review it</button>
-            </article>
+            <div class="contenu-carrousel">
+                <div class="carrousel"> 
+                    <div class="bloc bloc1">
+                        <h1>WildCoin Cookbook</h1>
+                        <p>Developer resource that provides the essential concepts and recipes for building applications on WildCoin.</p>
+                        <button class="blackButton">Review it</button>
+                    </div>
+                    <div class="bloc bloc2">
+                        <h1>WildCoinDev</h1>
+                        <p>WildCoin content aggregator with easy discoverability for all your development needs including tutorials, tools, reference implementations and more.</p>
+                        <button class=blackButton>Review it</button>
+                    </div>
+                    <div class="bloc bloc3">
+                        <h1>WildCoin Docs</h1>
+                        <p>The core wildCoin documentation used to provide deep understanding of WildCoin concepts, architecture, programming model and more.</p>
+                        <button class=blackButton>Review it</button>
+                    </div>
+                    <div class="bloc bloc4">
+                        <h1>Metaplex Docs</h1>
+                        <p>The core Metaplex documentation used to provide understanding and implementations for building with NFTs on WildCoin.</p>
+                        <button class=blackButton>Review it</button>
+                    </div>
+                    <div class="bloc bloc5">
+                        <h1>Questbook x Superteam</h1>
+                        <p>Questbook x Superteam
+                            Learn how to build on the world’s fastest blockchain by doing these quests and start contributing to ecosystem projects right away!</p>
+                        <button class=blackButton>Review it</button>
+                    </div>
+                    <div class="bloc bloc6">
+                        <h1>Intro To Anchor Framework</h1>
+                        <p>Anchor is a framework that makes building Solana applications easier by abstracting a lot of the heavy lifting.</p>
+                        <button class=blackButton>Review it</button>
+                    </div>
+                </div> 
+            </div>     
+            <div class=controle>
+                <button onclick="carrousel('-')">❮</button>
+                <button onclick="carrousel('')">❯</button>
+            </div>           
         </section>
         <section>
             <div class="toolsContainer">
@@ -75,7 +94,6 @@
                     <h1>Start with the</h1>
                     <h1>WildCoin cli</h1>
                     <p class="pMargin">The WildCoin CLI is a tool that allows you to interact with the WildCoin blockchain via the command line.</p>
-                    <!-- <button class=whiteButton>Build now</button> -->
                     <button class=whiteButton>Buy now</button>
                 </article>
                 <article class="/toolBloc toolBloc3">
