--- a/pages/devresources/developper-resources.html
+++ b/pages/devresources/developper-resources.html
@@ -9,17 +9,17 @@
     <title>Document</title>
 </head>
 <body>
+    <nav class="nav">
+        <h1>Header Nav</h1>
+    </nav>
     <main>
-        <nav class="nav">
-            <h1>Header Nav</h1>
-        </nav>
         <section>
             <div class="beginnersBlog">
                 <div class="devresource1-1">
                     <h1>WildCoin for Beginners Blog Post</h1>
                 </div>
                 <div class="devresource1-2">
-                    <p>Learn about high-level topics related to WildCoin development such as development workflows, programs, myths, dApps (decentralized applications), and client SDKs.</p>
+                    <p>Learn about high-level topics related to WildCoin development such as development workflows., programs, myths, dApps.</p>
                     <button class="blackButtonBegin">READ THE BLOG</button>
                 </div>
             </div>
@@ -56,7 +56,7 @@
                         <button class=blackButton>Review it</button>
                     </div>
                     <div class="bloc bloc6">
-                        <h1>Intro To Anchor Framework</h1>
+                        <h1>Intro Anchor Framework</h1>
                         <p>Anchor is a framework that makes building Solana applications easier by abstracting a lot of the heavy lifting.</p>
                         <button class=blackButton>Review it</button>
                     </div>
@@ -72,36 +72,32 @@
                 <article class="toolBloc toolBloc1">
                     <p>~</p>
                     <p>➞  WildCoin config set --url https://api.devnet.wildcoin.com</p>
-                    <p> Keypair Path: /Users/eric/.config/wildcoin/id.json</p>
+                    <p> Keypair Path: /Users/eric/wildcoin/id.json</p>
                     <p> Commitment: confirmed</p>
                     <br>
                     <p> ~ 4 WILD</p>
                     <p> ➞  wildcoin airdrop 1</p>
-                    <p> Requesting wildcoin of 1 SOL</p>
                     <p></p>
-                    <p> Signature: 2vmr7UNM255MhnJ2ht8PzaZmN5oeJ</p>
-                    <p></p>
+                    <p> Signature: 2vmr7UNM255MhnJ2ht8Pza</p>
+                    <br>
                     <p> ~ 5 WILD</p>
                     <p>  ➞  wildcoin balance #</p>
-                    <p></p>
                     <p> ➞  wildcoin confirm --verbose 2vmr7UNM255Mh</p>
-                    <p> Default Signer Path: /Users/eric/.config/wildcoin/id.json</p>
+                    <br>
                     <p> Commitment: confirmed</p>
-                    <p></p>
-                    <p>Confirmed</p>
                 </article>
                 <article class="toolBloc toolBloc2">
                     <h1>Start with the</h1>
                     <h1>WildCoin cli</h1>
                     <p class="pMargin">The WildCoin CLI is a tool that allows you to interact with the WildCoin blockchain via the command line.</p>
-                    <button class=whiteButton>Buy now</button>
+                    <button class=whiteButton>Build now</button>
                 </article>
                 <article class="/toolBloc toolBloc3">
                 </article>
                 <article class="toolBloc toolBloc4">
                     <h1>WildCoin Explorer</h1>
                     <p class="pMargin">The WildCoin Explorer allows you to look up transactions and accounts on the various WildCoin clusters.</p>
-                    <button class=whiteButton>Buy now</button>
+                    <button class=whiteButton>Build now</button>
                 </article>
                 <article class="toolBloc toolBloc5">
                     <video id="background-video" autoplay loop muted>
@@ -115,14 +111,14 @@
                 <article class="toolBloc toolBloc6">
                     <h1>WildCoin Graphicals</h1>
                     <p class="pMargin">The WildCoin Graphicals allows you to see variations of WildCoin values</p>
-                    <button class=whiteButton>Buy now</button>
+                    <button class=whiteButton>Build now</button>
                  </article>
             </div>
         </section>
+    </main>
     <footer>
         <div>@2022 WildCon technologie</div>
      </footer>
-    </main>
     <script src="scriptdevres.js"></script>
 </body>
 </html>
