--- a/pages/landing-page/index.html
+++ b/pages/landing-page/index.html
@@ -14,6 +14,8 @@
 <header>
     <nav class="navbar">
 
+        
+
         <ul class="nav-links">
 
             <input type="checkbox" id="checkbox_toggle"/>
@@ -21,7 +23,7 @@
 
         <div class="menu">
 
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/pages/landing-page/index.html">Home</a></li>
             <li><a href="/pages/ecosystem/ecosystem.html">Ecosystem</a></li>
             <li><a href="/pages/devresources/developper-resources.html">Developer resources</a></li>
         </div>
@@ -47,7 +49,7 @@
     <div class="bg-ss-v">
 
     <div>
-        <h1 class="title"> Powerful for developers. </br>Fast for everyone.</h1>
+        <h1 class="title"> Powerful for developers </br>Fast for everyone</h1>
     </div> 
 
     <div class="buttons-cta">
