--- a/pages/devresources/developper-resources.html
+++ b/pages/devresources/developper-resources.html
@@ -34,7 +34,7 @@
                     <h1>WildCoin for Beginners Blog Post</h1>
                 </div>
                 <div class="devresource1-2">
-                    <p>Learn about high-level topics related to WildCoin development such as development workflows, programs, myths, dApps (decentralized applications), and client SDKs.</p>
+                    <p>Learn about high-level topics related to WildCoin development such as development workflows, programs, myths, dApps and client SDKs.</p>
                     <button class="blackButtonBegin">READ THE BLOG</button>
                 </div>
             </div>
@@ -87,23 +87,19 @@
                 <article class="toolBloc toolBloc1">
                     <p>~</p>
                     <p>➞  WildCoin config set --url https://api.devnet.wildcoin.com</p>
-                    <p> Keypair Path: /Users/eric/.config/wildcoin/id.json</p>
                     <p> Commitment: confirmed</p>
                     <br>
                     <p> ~ 4 WILD</p>
                     <p> ➞  wildcoin airdrop 1</p>
                     <p> Requesting wildcoin of 1 SOL</p>
-                    <p></p>
                     <p> Signature: 2vmr7UNM255MhnJ2ht8PzaZmN5oeJ</p>
-                    <p></p>
+                    <br>
                     <p> ~ 5 WILD</p>
                     <p>  ➞  wildcoin balance #</p>
-                    <p></p>
-                    <p> ➞  wildcoin confirm --verbose 2vmr7UNM255Mh</p>
-                    <p> Default Signer Path: /Users/eric/.config/wildcoin/id.json</p>
+
+                    <p> ➞  wildcoin confirm --verbose 2vmr</p>
+                    <br>
                     <p> Commitment: confirmed</p>
-                    <p></p>
-                    <p>Confirmed</p>
                 </article>
                 <article class="toolBloc toolBloc2">
                     <h1>Start with the</h1>
