added navbar for desktop and mobile version

--- a/pages/ecosystem/ecosystem.html
+++ b/pages/ecosystem/ecosystem.html
@@ -10,14 +10,17 @@
   
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li>WildCoin</li>
-        <li>Menu</li>
-      </ul>
-      </div>
-    </nav>
+  <header class="header">
+    <a href="" class="logo">
+      <img src="assets/full-logo.png" alt="logo" width="100px">
+    </a>
+    <input class="menu-btn" type="checkbox" id="menu-btn" />
+    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+    <ul class="menu">
+      <li><a href="#">Home</a></li>
+      <li><a href="/projet1-crypto/pages/ecosystem/ecosystem.html">Ecosystem</a></li>
+      <li><a href="#">Developer Resources</a></li>
+    </ul>
   </header>
   <main>
     <div class="search-container">
