--- a/pages/devresources/developper-resources.html
+++ b/pages/devresources/developper-resources.html
@@ -16,9 +16,9 @@
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
-          <li><a href="/pages/landing-page/index.html">Home</a></li>
-          <li><a href="/projet1-crypto/pages/ecosystem/ecosystem.html">Ecosystem</a></li>
-          <li><a href="/pages/devresources/developper-resources.html">Developer Resources</a></li>
+          <li><a href="../pages/landing-page/index.html">Home</a></li>
+          <li><a href="../pages/ecosystem/ecosystem.html">Ecosystem</a></li>
+          <li><a href="../pages/devresources/developper-resources.html">Developer Resources</a></li>
         </ul>
     </header>
     <main>
