--- a/pages/landing-page/index.html
+++ b/pages/landing-page/index.html
@@ -16,9 +16,9 @@
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
-        <li><a href="/pages/landing-page/index.html">Home</a></li>
-        <li><a href="/pages/ecosystem/ecosystem.html">Ecosystem</a></li>
-        <li><a href="/pages/devresources/developper-resources.html">Developer resources</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="../ecosystem/ecosystem.html">Ecosystem</a></li>
+        <li><a href="../devresources/developper-resources.html">Developer resources</a></li>
     </ul>
 </header>
 
